初次代码提交

--- a/ntx-base/pom.xml
+++ b/ntx-base/pom.xml
@@ -15,20 +15,12 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>ntx-base</name>
     <description>Demo project for Spring Boot</description>
-
+    <packaging>jar</packaging>
 
 
     <dependencies>
 
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
