--- a/ntx-business-shop/pom.xml
+++ b/ntx-business-shop/pom.xml
@@ -11,6 +11,7 @@
     <artifactId>ntx-business-shop</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>ntx-business-shop</name>
+    <packaging>jar</packaging>
     <description>B端商铺</description>
 
 
@@ -22,13 +23,5 @@
         </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
