集成nacos服务注册与发现、优化日志打印、提供获取服务器时间接口

--- a/ntx-demo/src/main/resources/application.properties
+++ b/ntx-demo/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 server.port=8600
+spring.application.name=ntx-demo
+
+################################# nacos服务注册与发现相关配置 ##################################
+# 开启/关闭nacos的服务注册与发现
+spring.cloud.nacos.discovery.enabled=true
+# nacos注册中心地址
+spring.cloud.nacos.discovery.server-addr=192.168.0.176:1111
+# 设置当前的服务名
+spring.cloud.nacos.discovery.service=${spring.application.name}
+# 设置服务所处的分组(默认:DEFAULT_GROUP)
+spring.cloud.nacos.discovery.group=DEFAULT_GROUP
+# 命名空间(常用场景之一是不同环境的注册的区分隔离，例如开发测试环境和生产环境的资源)
+spring.cloud.nacos.discovery.namespace=c1909680-9251-4364-b1e8-01e71e243549
