集成redis和redis分布式锁

--- a/ntx-demo/src/main/resources/application.properties
+++ b/ntx-demo/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8600
 spring.application.name=ntx-demo
 
-################################# nacos服务注册与发现相关配置 ##################################
+################################# Nacos 服务注册与发现相关配置 ##################################
 # 开启/关闭nacos的服务注册与发现
-spring.cloud.nacos.discovery.enabled=true
+spring.cloud.nacos.discovery.enabled=false
 # nacos注册中心地址
 spring.cloud.nacos.discovery.server-addr=192.168.0.176:1111
 # 设置当前的服务名
@@ -12,3 +12,14 @@ spring.cloud.nacos.discovery.service=${spring.application.name}
 spring.cloud.nacos.discovery.group=DEFAULT_GROUP
 # 命名空间(常用场景之一是不同环境的注册的区分隔离，例如开发测试环境和生产环境的资源)
 spring.cloud.nacos.discovery.namespace=c1909680-9251-4364-b1e8-01e71e243549
+
+
+################################# Redis 服务注册与发现相关配置 ##################################
+# redis默认数据库
+spring.redis.database=0
+# redis服务ip
+spring.redis.host=192.168.0.176
+# redis服务端口
+spring.redis.port=6379
+# redis连接超时时间(单位:毫秒)
+spring.redis.timeout=3000
