--- a/ntx-demo/src/main/resources/application.properties
+++ b/ntx-demo/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.cloud.nacos.discovery.group=DEFAULT_GROUP
 spring.cloud.nacos.discovery.namespace=c1909680-9251-4364-b1e8-01e71e243549
 
 
-################################# Redis 服务注册与发现相关配置 ##################################
+################################# Redis 服务配置 ##################################
 # redis默认数据库
 spring.redis.database=0
 # redis服务ip
@@ -23,3 +23,14 @@ spring.redis.host=192.168.0.176
 spring.redis.port=6379
 # redis连接超时时间(单位:毫秒)
 spring.redis.timeout=3000
+
+
+################################# 数据源配置 ##################################
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ntx-test?serverTimezone=Asia/Shanghai&characterEncoding=utf8&autoReconnect=true&useUnicode=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=123456
+
+################################# Mybatis-Plug 配置 ##################################
+mybatis-plus.mapper-locations=/mybatis/mapper/*.xml
+mybatis-plus.config-location=classpath:/mybatis/mybatis-config.xml
