--- a/ntx-demo/src/main/resources/application.properties
+++ b/ntx-demo/src/main/resources/application.properties
@@ -34,3 +34,7 @@ spring.datasource.password=123456
 ################################# Mybatis-Plug ≈‰÷√ ##################################
 mybatis-plus.mapper-locations=/mybatis/mapper/*.xml
 mybatis-plus.config-location=classpath:/mybatis/mybatis-config.xml
+
+
+################################# RocketMQ ≈‰÷√ ##################################
+rocketmq.nameServer=192.168.0.176:9876;192.168.0.176:9877
