--- a/ntx-demo/src/main/resources/application.properties
+++ b/ntx-demo/src/main/resources/application.properties
@@ -32,7 +32,7 @@ spring.datasource.username=root
 spring.datasource.password=123456
 
 ################################# Mybatis-Plug ≈‰÷√ ##################################
-mybatis-plus.mapper-locations=/mybatis/mapper/*.xml
+mybatis-plus.mapper-locations=classpath*:/mybatis/mapper/*.xml
 mybatis-plus.config-location=classpath:/mybatis/mybatis-config.xml
 
 
