添加捕获404异常功能

--- a/ntx-demo/src/main/resources/application.properties
+++ b/ntx-demo/src/main/resources/application.properties
@@ -38,3 +38,10 @@ mybatis-plus.config-location=classpath:/mybatis/mybatis-config.xml
 
 ################################# RocketMQ 配置 ##################################
 rocketmq.nameServer=192.168.0.176:9876;192.168.0.176:9877
+
+
+################################# 捕获404异常 配置 ##################################
+#出现错误时, 直接抛出异常
+spring.mvc.throw-exception-if-no-handler-found=true
+#不要为我们工程中的资源文件建立映射
+spring.resources.add-mappings=false
